--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
         "express": "^4.18.2",
         "socket.io": "^4.6.1",
         "uuid": "^10.0.0"
+    },
+    "devDependencies": {
+        "nodemon": "^3.1.4"
     }
 }
