--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "author": "",
     "dependencies": {
         "axios": "^1.3.3",
+        "cookie-parser": "^1.4.7",
         "dotenv": "^16.4.5",
         "express": "^4.18.2",
         "socket.io": "^4.6.1",
